tests/ui/nll/relate_tys/trait-hrtb.stderr
error: higher-ranked subtype error
  --> $DIR/trait-hrtb.rs:13:39
   |
LL |     let y: Box<dyn for<'a> Foo<'a>> = x;
   |                                       ^

error: aborting due to 1 previous error

